# downloader-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.local.yml  docker-compose.production.yml
.devcontainer/: devcontainer.json  zshrc.override.sh
.envs/.local/: .downloader-rs  .postgres
.github/workflows/: general.yml
.sqlx/: query-581621294b7ab9d839b9115701136ceac33b98a58d84148cd7150b89a31cc675.json  query-59914725cbd437c594e948972f9fcca69b12dbfce7cf2a11f67b5d27077efc66.json  query-84a385c27f1340eb625f1809e2954f17604329a475363577dda7865f68ee5e91.json  query-8fcd92e00d2e65d3c6b697d2eb70c458c6461c58174fd07585aaea459a020962.json  query-9fc6f807c7b3ed98bbe4c2cca78d6a4c33c177f924d496317860ef898b6fca51.json  query-acaaf7d8d2f6b76edd5a26468d12845cfcee61711eb591c9eedee84f03d88a7d.json  query-c0dd6fd801804acaeba9d92037aca7d7656cc927885f8cdddbf1de20dce02b77.json  query-c63ef6bbc5297fce12433a0ed3f0f7b481eb4036e987afd633b7fdbadd8c8ffd.json  query-d24c44dfb6f3e3153d3c2fd886a334d403d4146f56f587bd15021ba20e18fa5d.json  query-eaf0cee5696a66f1de40d3d2d8a172ccaa7e99c90b29f95899433c8816d30d8c.json  query-f4085a5aa7e07575e0c70b6619488994ac784d66576d9fa93591c5bc670d41b3.json  query-f61276f7dcafb7f2850b19c7d5d1fb59dbb61ba6bdc16ec0bd1cde1e4eb2160b.json  query-fd52e2fdf3b4a8ef838b7d74e4dc7d7b86a021ae9974d7ba9ae89d4d1b946d5b.json
compose/local/downloader-rs/: Dockerfile  start
compose/production/downloader-rs/: Dockerfile  start
compose/production/traefik/: traefik.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250103063039_create_downloads_table.sql  20250103063039_create_users_table.down.sql  20250103063039_create_users_table.up.sql  20250318113031_create_downloads_table.down.sql  20250318113031_create_downloads_table.up.sql
scripts/: init_db.sh
src/: api.rs  configuration.rs  lib.rs  main.rs  models.rs  session_state.rs  telemetry.rs
src/cli/: args.rs  mod.rs
src/clients/: mod.rs  s3.rs
src/middlewares/: auth.rs  mod.rs
src/models/: download.rs  mod.rs  user.rs
src/repository/: auth.rs  download.rs  mod.rs
src/routes/: auth.rs  download.rs  mod.rs
src/utils/: api.rs  auth.rs  errors.rs  file.rs  mod.rs
tests/api/: download.rs  helpers.rs  main.rs
