[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "downloader"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "downloader"

[dependencies]
actix-web = "4.10"
actix-session = { version = "0.10.1", features = ["redis-session-native-tls"] }
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"] }
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "^4.5", features = ["derive"] }
config = "0.15.11"
dotenvy = "0.15.7"
futures-util = "0.3.31"
manic = "0.8.1"
rand = { version = "0.9", features = ["std_rng"] }
reqwest = { version = "0.12.15", features = [
    "multipart",
    "stream",
    "json",
    "cookies",
] }
rust-s3 = "0.35.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
serde_json = "1.0.140"
tokio = { version = "^1.44", features = ["fs", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-attributes = "0.1.28"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
wiremock = "0.6.3"
thiserror = "2.0.12"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "^1.21"
