[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[lib]
name = "downloader"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "downloader"

[dependencies]
actix-web = "4.12"
actix-session = { version = "0.11.0", features = ["redis-session-native-tls"] }
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "^4.5.53", features = ["derive"] }
config = "0.15.19"
dotenvy = "0.15.7"
futures-util = "0.3.31"
manic = "0.8.1"
rand = { version = "^0.9.2", features = ["std_rng"] }
reqwest = { version = "0.13.1", features = [
    "multipart",
    "stream",
    "json",
    "cookies",
] }
rust-s3 = "0.37.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.148"
tokio = { version = "^1.48", features = ["fs", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "^0.7.20"
tracing-attributes = "0.1.31"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
wiremock = "0.6.5"
thiserror = "2.0.17"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
once_cell = "^1.21"
